--- a/index.css
+++ b/index.css
@@ -97,6 +97,8 @@ body{
 }
 .error-msg[visibility='visible'] {
   display: block;
+  color: var(--soft-red);
+  padding: .5rem 0 0 0;
 }
 
 @media (min-width:700px){
